[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/Enemies/Enemy-Forest-Goblin-Hog-Idle-32x32.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 8.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.8 ), Color( 1, 0, 0, 0.8 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 123, 18.5 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )
enemy_damage = 10
health = 30
move_speed = 110
distance_threshold = 17
attack_cooldown = 1.5

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 2

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 7.5 )
shape = SubResource( 1 )

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/hit = SubResource( 5 )
anims/idle = SubResource( 3 )

[node name="detection_area" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="detection_area"]
position = Vector2( 0, 0.5 )
shape = SubResource( 4 )

[node name="attack_cooldown" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="animation" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
